public/chat.css
body {
    align-items: left;
    flex-direction: none;
}

#chat-text {
    padding: 1em 0;
}
div .friend {
    color: rgb(191, 139, 245);
margin-left: 0.5em;
}
div .me {
    color: rgb(147, 197, 255);
}
div .system {
    color: rgb(225, 10, 125);
}
.name {
    padding: 1em 0;
}

